--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Gestion de Réservation</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <h1>Gestion de Réservation</h1>
+            <h1 class="cardh1">Gestion de Réservation</h1>
             <h2>Date</h2>
                 <input type="date"></input>
             <div class="servicecont">
