--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="card">
             <h1 class="cardh1">Gestion de Réservation</h1>
             <h2>Date</h2>
-                <input type="date">click pour choisir la date</input>
+                <input type="date"></input>
             <div class="servicecont">
                 <button class="selectserv">12:00</button>
                 <button class="selectserv">13:00</button>
